--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -56,7 +56,7 @@
 
 
 
-        <div class="col-7 mobile-col-12 desktop_only">
+        <div class="col-7 mobile-col-12 desktop_only bubble_col">
 
 
             <div class="progress_container" >
@@ -75,7 +75,7 @@
           </div>
 
         </div>
-        <div class="col-4 mobile-col-12 ">
+        <div class="col-4 mobile-col-12 steps_col ">
           <div class="steps_box">
              <p class="steps_title">1.Window Panes </p>
 
