--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -333,6 +333,10 @@
   .our_clients_main_box{
     height:75%;
   }
+  .main_box_paragraph{
+    font-size:1rem;
+    padding:2.5%;
+  }
 
 }
 .client_image{
