--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -467,6 +467,7 @@
     margin-top:20% !important;
   }
 
+
 }
 
 @media screen and (max-width:490px) and (orientation:portrait){
@@ -800,6 +801,9 @@
 
   .showcase_banner--2{
     margin-top: 5%;
+  }
+  .contact_info_section--email{
+    font-size:2rem;
   }
 
 }
