--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -442,8 +442,8 @@
   }
 
  .knob_s{
-    top: -200% !important;
-    right: -30% !important;
+    top: 20px !important;
+    right: 30px !important;
     position: relative
   }
 
